--- a/src/pages/activity-mine/index.scss
+++ b/src/pages/activity-mine/index.scss
@@ -1,78 +1,146 @@
-.activity-mine{
+.activity-mine {
   width: 100%;
   height: 100%;
   background-color: #f7f7f7;
   overflow-y: scroll;
 
-  .header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  .header {
+    position: relative;
     height: 2.5rem;
-    font-size: .8rem;
+    font-size: 0.8rem;
+
+    &__back {
+      position: absolute;
+      top: 50%;
+      left: 1rem;
+      transform: translateY(-50%);
+    }
+
+    &__title {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: 1.2em;
+    }
   }
 
-  .content{
+  .content {
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
-    padding: .6rem .8rem;
+    padding: 0.6rem 0.8rem;
+    margin-bottom: 3rem;
   }
 
-  .card{
+  .footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .redeem-now{
+      color: #fff;
+      background-color: #ff3766;
+      border-radius: 999px;
+      margin: 0 1rem;
+    }
+  }
+
+  .card {
     color: #450a0a;
     background-color: #fff;
     padding: 0.6rem 1rem;
     border-radius: 0.6rem;
 
-    &--top{
+    &--top {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       color: #fff;
       background-image: linear-gradient(45deg, #fe3464, #fe6578);
 
-      .title{
-        font-size: .6rem;
+      .title {
+        font-size: 0.6rem;
 
-        &--coin{
+        &--coin {
           grid-column: 1 / 2;
           grid-row: 1 / 2;
         }
 
-        &--money{
+        &--money {
           grid-column: 2 / 3;
           grid-row: 1 / 2;
         }
       }
 
-      .value{
+      .value {
         font-size: 1.4rem;
 
-        &--coin{
+        &--coin {
           grid-column: 1 / 2;
           grid-row: 2 / 3;
         }
 
-        &--money{
+        &--money {
           grid-column: 2 / 3;
           grid-row: 2 / 3;
         }
       }
 
-      .tips{
+      .tips {
         grid-column: 1 / 3;
-        font-size: .6rem;
-        color: rgba($color: #fff, $alpha: .6);
+        font-size: 0.6rem;
+        color: rgba($color: #fff, $alpha: 0.6);
       }
 
-      .bottom-bar{
+      .bottom-bar {
         grid-column: 1 / 3;
         display: flex;
         justify-content: space-between;
-        margin: .5rem -1rem -.6rem;
-        padding: .5rem 1rem;
+        margin: 0.5rem -1rem -0.6rem;
+        padding: 0.5rem 1rem;
+        font-size: 0.8rem;
+        background-color: rgba($color: #fff, $alpha: 0.1);
+      }
+    }
+
+    &--redeem {
+      .title {
         font-size: .8rem;
-        background-color: rgba($color: #fff, $alpha: .1);
+        margin-bottom: .5rem;
+      }
+
+      .list {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 0.5rem;
+      }
+
+      .item {
+        display: flex;
+        justify-content: center;
+        grid-column: span 1;
+        background-color: #f8f8f8;
+        border-radius: .5rem;
+        padding: 1rem 0;
+
+        &__content{
+          font-size: .9rem;
+        }
+
+        &--active{
+          color: #fc3666;
+          border: 2px solid #fc3666;
+        }
+
+        &--disabled{
+          color: #ccc;
+          border: 2px solid #ccc;
+        }
       }
     }
   }
