--- a/src/pages/login/index.scss
+++ b/src/pages/login/index.scss
@@ -3,11 +3,11 @@
   flex-direction: column;
   justify-content: space-between;
   height: 100vh;
-  padding: 0 1.8rem;
+  padding: 3rem 1.8rem 1.5rem;
   box-sizing: border-box;
 
   .header {
-    padding: 3rem 0 0;
+    padding-bottom: 2rem;
 
     &__top-title {
       display: inline-block;
@@ -31,73 +31,95 @@
     }
   }
 
-  .logo{
-    height: 7rem;
-    background-image: url('../../assets/images/logo.jpg');
+  .logo {
+    margin: 0 auto 0;
+    width: 5rem;
+    height: 5rem;
+    background-image: url("../../assets/images/logo.jpg");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
+    border: 0.2rem solid #e76038;
+    border-radius: 50%;
   }
 
   .tips {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    &__progress {
+      width: 70%;
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      column-gap: 0.3rem;
 
-    &__title {
-      font-size: 1rem;
+      &-start, &-end{
+        flex-shrink: 0;
+        width: 1rem;
+        height: 1rem;
+        line-height: 1rem;
+        font-size: .7rem;
+        text-align: center;
+        border-radius: 50%;
+        color: #999;
+        background-color: #eee;
+      }
+
+      &-end{
+        color: #fff;
+        background-color: #e76038;
+      }
+
+      &-line {
+        flex-grow: 1;
+        height: 0.1rem;
+        background-image: linear-gradient(to right, transparent 30%, #cbd5e1 30%);
+        background-size: .2rem 100%;
+      }
     }
-    &__sub-title {
+
+    &__title{
+      margin-top: 1rem;
+      font-size: 0.8rem;
+      text-align: center;
+    }
+
+    &__desc{
       font-size: 0.7rem;
+      text-align: center;
       color: #999;
     }
+  }
+
+  .actions {
+    padding-top: 2rem;
 
     &__item {
       display: flex;
       align-items: center;
-      column-gap: .2rem;
-
-      &-icon {
-        flex-shrink: 0;
-      }
-      &-title {
-        flex-grow: 1;
-        font-size: .8rem;
-      }
-    }
-  }
-
-  .actions{
-
-    &__item{
-      display: flex;
-      align-items: center;
       justify-content: center;
-      column-gap: .3rem;
+      column-gap: 0.3rem;
       color: #fff;
-      font-size: .8rem;
-      padding: .4rem 0;
+      font-size: 0.8rem;
+      padding: 0.4rem 0;
       background: linear-gradient(-5deg, #e75225, #f59477);
       border-radius: 999px;
     }
   }
 
-  .footer{
+  .footer {
     display: flex;
     align-items: flex-start;
-    column-gap: .3rem;
-    padding-bottom: 1rem;
+    column-gap: 0.3rem;
 
-    &__checkbox{
+    &__checkbox {
       flex-shrink: 0;
-      margin-top: .1rem;
+      margin-top: 0.1rem;
     }
 
-    &__protocol{
-      font-size: .7rem;
+    &__protocol {
+      font-size: 0.7rem;
       word-break: break-all;
 
-      &-link{
+      &-link {
         display: inline;
         color: #e76038;
       }
