--- a/src/pages/community/index.scss
+++ b/src/pages/community/index.scss
@@ -3,11 +3,16 @@
   font-size: 1rem;
 
   .tabs {
+    height: 100%;
     --tabs-line-background-color: #e76038;
 
     &__pane {
       height: 100%;
       background-color: #f7f6fb;
+    }
+
+    .taroify-tabs__content{
+      height: calc(100% - 2.2rem);
     }
 
     .taroify-tabs__wrap {
@@ -20,6 +25,28 @@
   .search-bar {
     --search-background-color: transparent;
     --search-content-background-color: #fff;
+  }
+
+  .circle-list{
+    display: flex;
+    gap: .5rem;
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    font-size: .8rem;
+    padding: 0 .5rem .5rem;
+
+    &__item{
+      flex-shrink: 0;
+      padding: 0 .5rem;
+      border-radius: 1rem;
+      border: 2px solid #e76038;
+      transition: all 300ms;
+
+      &--active{
+        color: #fff;
+        background-color: #e76038;
+      }
+    }
   }
 
   .taroify-search__content {
