--- a/src/pages/community/index.scss
+++ b/src/pages/community/index.scss
@@ -11,7 +11,7 @@
       background-color: #f7f6fb;
     }
 
-    .taroify-tabs__content{
+    .taroify-tabs__content {
       height: calc(100% - 2.2rem);
     }
 
@@ -19,6 +19,7 @@
       // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
       // box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
       box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+      border-bottom: 2px solid rgba($color: #000000, $alpha: 0.1);
     }
   }
 
@@ -27,22 +28,22 @@
     --search-content-background-color: #fff;
   }
 
-  .circle-list{
+  .circle-list {
     display: flex;
-    gap: .5rem;
+    gap: 0.5rem;
     flex-wrap: nowrap;
-    overflow-x: scroll;
-    font-size: .8rem;
-    padding: 0 .5rem .5rem;
+    font-size: 0.8rem;
+    padding: 0 0.5rem 0.5rem;
+    box-sizing: border-box;
 
-    &__item{
+    &__item {
       flex-shrink: 0;
-      padding: 0 .5rem;
+      padding: 0 0.5rem;
       border-radius: 1rem;
       border: 2px solid #e76038;
       transition: all 300ms;
 
-      &--active{
+      &--active {
         color: #fff;
         background-color: #e76038;
       }
