--- a/src/pages/community/index.scss
+++ b/src/pages/community/index.scss
@@ -28,24 +28,35 @@
     --search-content-background-color: #fff;
   }
 
-  .circle-list {
+  .circle-list-wrapper{
     display: flex;
-    gap: 0.5rem;
-    flex-wrap: nowrap;
-    font-size: 0.8rem;
+    align-items: center;
     padding: 0 0.5rem 0.5rem;
+  }
+
+  .circle-list {
+    flex-grow: 1;
+    display: flex;
+    // gap: .8rem;
+    flex-wrap: nowrap;
+    font-size: 0.7rem;
     box-sizing: border-box;
 
     &__item {
       flex-shrink: 0;
       padding: 0 0.5rem;
       border-radius: 1rem;
-      border: 2px solid #e76038;
+      color: #999;
+      // border: 2px solid #e76038;
       transition: all 300ms;
 
       &--active {
-        color: #fff;
-        background-color: #e76038;
+        color: #000;
+        // background-color: #e76038;
+      }
+
+      &--pin{
+        flex-shrink: 0;
       }
     }
   }
