--- a/src/pages/community/explore-tab/index.scss
+++ b/src/pages/community/explore-tab/index.scss
@@ -12,18 +12,20 @@
 
   --article-item-height: 500px;
 
+  display: flex;
+  flex-direction: column;
   height: 100%;
   font-size: var(--font-lg);
 
   .scroll-view{
-    height: 100%;
+    flex-grow: 1;
   }
 
   .article-list{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: var(--font-sm);
-    padding: var(--gap-sm);
+    padding: 0 var(--gap-sm) var(--gap-sm);
   }
 
   .article-item{
