--- a/src/pages/community/components/search-bar/index.scss
+++ b/src/pages/community/components/search-bar/index.scss
@@ -2,3 +2,7 @@
   --search-background-color: transparent;
   --search-content-background-color: #fff;
 }
+
+.taroify-search__content {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+}
