--- a/src/pages/community/index.scss
+++ b/src/pages/community/index.scss
@@ -1,10 +1,24 @@
 .community-page {
+  --gap-xs: 0.25rem;
+  --gap-sm: 0.5rem;
+  --gap-md: 1rem;
+  --gap-lg: 1.5rem;
+
+  --font-sm: 0.7rem;
+  --font-md: 0.8rem;
+  --font-lg: 1rem;
+  --font-xl: 1.2rem;
+
+  --color-primary: #e76038;
+
+  --size: 2.5rem;
+
   height: 100%;
-  font-size: 1rem;
+  font-size: var(--font-md);
 
   .tabs {
     height: 100%;
-    --tabs-line-background-color: #e76038;
+    --tabs-line-background-color: var(--color-primary);
 
     &__pane {
       height: 100%;
@@ -16,120 +30,8 @@
     }
 
     .taroify-tabs__wrap {
-      // box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-      // box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
       box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
       border-bottom: 2px solid rgba($color: #000000, $alpha: 0.1);
-    }
-  }
-
-  .circle-list-wrapper{
-    display: flex;
-    align-items: center;
-    padding: 0 0.5rem 0.5rem;
-  }
-
-  .circle-list {
-    flex-grow: 1;
-    display: flex;
-    // gap: .8rem;
-    flex-wrap: nowrap;
-    font-size: 0.7rem;
-    box-sizing: border-box;
-
-    &__item {
-      flex-shrink: 0;
-      padding: 0 0.5rem;
-      border-radius: 1rem;
-      color: #999;
-      // border: 2px solid #e76038;
-      transition: all 300ms;
-
-      &--active {
-        color: #000;
-        // background-color: #e76038;
-      }
-
-      &--pin{
-        flex-shrink: 0;
-      }
-    }
-  }
-
-  .taroify-search__content {
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
-  }
-
-  .post-list {
-    display: flex;
-    flex-direction: column;
-    row-gap: 0.5rem;
-    padding: 0 0.5rem 1rem;
-  }
-
-  .post-item {
-    display: flex;
-    flex-direction: column;
-    row-gap: 0.2rem;
-    padding: 0.5rem;
-    background-color: #fff;
-    border-radius: 0.5rem;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
-
-    &__content {
-      font-size: 0.8rem;
-      line-height: 1.5;
-
-      &__expand {
-        display: inline-block;
-        color: #e76038;
-      }
-    }
-
-    &__images {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 0.5rem;
-
-      &__item {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 0.3rem;
-      }
-    }
-
-    &__actions {
-      display: flex;
-      justify-content: space-around;
-      column-gap: 0.5rem;
-      color: #999;
-
-      &__item {
-        display: flex;
-        align-items: center;
-        column-gap: 0.5rem;
-        padding: 0.3rem 0;
-
-        &__text {
-          font-size: 0.7rem;
-        }
-      }
-    }
-
-    &__circles {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.5rem;
-      padding: 0.5rem 0 0;
-      border-top: 1px solid #eee;
-
-      &__item {
-        font-size: 0.6rem;
-        padding: 0.2rem 0.6rem;
-        background-color: #eee;
-        border-radius: 0.5rem;
-      }
     }
   }
 
@@ -141,6 +43,7 @@
     bottom: 0;
     z-index: 100;
     pointer-events: none;
+    font-size: var(--font-lg);
 
     &--hidden {
       .floating__bg {
@@ -176,18 +79,16 @@
 
     &__btn {
       position: fixed;
-      right: 1rem;
-      bottom: 3rem;
+      right: var(--gap-md);
+      bottom: calc(var(--gap-lg) * 2);
       z-index: 1;
 
-      --size: 2.5rem;
-      --primary-color: #e76038;
       width: var(--size);
       height: var(--size);
       line-height: var(--size);
       text-align: center;
       color: #fff;
-      background-color: var(--primary-color);
+      background-color: var(--color-primary);
       border-radius: 50%;
       box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
         rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
@@ -201,43 +102,43 @@
         top: 50%;
         left: -3.8rem;
         transform: translateY(-50%);
-        height: 1.3rem;
-        line-height: 1.3rem;
-        padding: 0 0.5rem;
-        font-size: 0.6rem;
-        border-radius: 0.5rem;
+        height: var(--gap-lg);
+        line-height: var(--gap-lg);
+        padding: 0 var(--gap-sm);
+        font-size: var(--font-sm);
+        border-radius: var(--gap-sm);
         transition: opacity 300ms;
       }
 
       &--text {
-        --primary-color: #047857;
+        --color-primary: #047857;
         transform: translate(0, -4rem) scale(0.9);
         box-shadow: none;
 
         .floating__btn__desc {
-          color: var(--primary-color);
+          color: var(--color-primary);
           background-color: #fff;
         }
       }
 
       &--img-text {
-        --primary-color: #3b82f6;
+        --color-primary: #3b82f6;
         transform: translate(0, -7rem) scale(0.9);
         box-shadow: none;
 
         .floating__btn__desc {
-          color: var(--primary-color);
+          color: var(--color-primary);
           background-color: #fff;
         }
       }
 
       &--imgs {
-        --primary-color: #f59e0b;
+        --color-primary: #f59e0b;
         transform: translate(0, -10rem) scale(0.9);
         box-shadow: none;
 
         .floating__btn__desc {
-          color: var(--primary-color);
+          color: var(--color-primary);
           background-color: #fff;
         }
       }
