--- a/src/pages/community-detail/index.scss
+++ b/src/pages/community-detail/index.scss
@@ -1,6 +1,6 @@
 .community-detail-page{
   height: 100%;
-  padding: 1rem;
+  padding: 1rem 1rem 4rem;
   background-color: #fff;
   box-sizing: border-box;
   overflow: scroll;
@@ -14,30 +14,6 @@
     margin-top: .5rem;
     font-size: .8rem;
   }
-
-  // .post-actions{
-  //   display: flex;
-  //   justify-content: space-around;
-  //   padding: 1rem 0;
-
-  //   &__item{
-  //     display: flex;
-  //     flex-direction: column;
-  //     align-items: center;
-  //     justify-content: center;
-  //     row-gap: .2rem;
-  //     width: 3rem;
-  //     height: 3rem;
-  //     line-height: 1;
-  //     border: 4px solid #ccc;
-  //     border-radius: .8rem;
-  //     font-size: .6rem;
-
-  //     &__icon{
-  //       font-size: 1.3rem;
-  //     }
-  //   }
-  // }
 
   .post-actions{
     display: flex;
