--- a/src/pages/community/components/author-info/index.scss
+++ b/src/pages/community/components/author-info/index.scss
@@ -29,11 +29,16 @@
     display: flex;
     column-gap: .1rem;
     align-items: center;
+    justify-content: center;
     color: #e76038;
     border: 3px solid #e76038;
     // background-color: rgba($color: #e76038, $alpha: .2);
     border-radius: 10rem;
-    padding: 0.1rem .5rem;
+    padding: 2px .5rem;
     font-size: .6rem;
+
+    &--silent{
+      margin-top: 8px;
+    }
   }
 }
