社区页面增加底边距防止底部栏遮挡

--- a/src/pages/community/index.scss
+++ b/src/pages/community/index.scss
@@ -23,6 +23,7 @@
     &__pane {
       height: 100%;
       background-color: #f7f6fb;
+      padding-bottom: 80px;
     }
 
     .taroify-tabs__content {
