--- a/src/pages/community/circles-tab/index.scss
+++ b/src/pages/community/circles-tab/index.scss
@@ -41,6 +41,52 @@
     }
   }
 
+  .circle-panel-wrapper {
+    position: relative;
+    z-index: 2;
+
+    &--hidden {
+      .circle-panel {
+        opacity: 0;
+      }
+    }
+
+    .circle-panel {
+      position: absolute;
+      top: 0;
+      left: var(--gap-sm);
+      right: var(--gap-sm);
+      padding: var(--gap-sm);
+      background-color: #fff;
+      border: solid 2px #eee;
+      border-radius: 0 0 var(--gap-md) var(--gap-md);
+      box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+      transition: opacity 240ms;
+
+      &__title {
+        font-size: var(--font-md);
+        margin: var(--gap-sm) 0;
+
+        &:first-child {
+          margin-top: 0;
+        }
+      }
+
+      &__list {
+        display: flex;
+        flex-wrap: wrap;
+        gap: var(--gap-sm);
+      }
+
+      &__item {
+        color: rgba($color: #000000, $alpha: 0.8);
+        padding: 0 var(--gap-sm);
+        border: solid 2px #eee;
+        border-radius: var(--gap-sm);
+      }
+    }
+  }
+
   .post-list {
     display: flex;
     flex-direction: column;
