--- a/src/pages/community-publish/index.scss
+++ b/src/pages/community-publish/index.scss
@@ -28,7 +28,7 @@
 
     .input-content {
       width: 100%;
-      height: 15rem;
+      height: 10rem;
       padding: 0.5rem;
       box-sizing: border-box;
     }
@@ -36,6 +36,10 @@
     .taro-textarea {
       font-size: 0.9rem;
     }
+  }
+
+  .pics{
+    padding: 0.5rem;
   }
 
   .circles {
